hphp/hack/test/typecheck/ffp/function_async_partial.php
<?hh

// Skipping an Awaitable hint's type parameters is an error.
async function foo(): Awaitable {}
